--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -82,6 +82,18 @@
 
             </div>
         </div>
+
+        <br>
+        <div class="row align-items-center justify-content-between">
+            <a href="/about-us">About US</a>
+            <a href="/contact-us">Contact US</a>
+            <a href="/privacy-policy">Privacy Policies</a>
+            <a href="/disclaimer">Disclaimer</a>
+            <a href="/affiliate">Affiliate Policy</a>
+            <a href="/terms-of-service">Terms of Service</a>
+            <a href="/sitemap.xml">Site Map</a>
+
+        </div>
         </div>
     </footer>
 
