Added search engines

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -41,6 +41,11 @@
 
     {% include tracking-header.html %}
 
+    <!-- Added searchs -->
+    <meta name="msvalidate.01" content="D949E2F107551F710F1D7CCF92BE9E7E" />
+    <meta name="yandex-verification" content="df4e56b7ff3b08d2" />
+    <meta name="seznam-wmt" content="qvHyVUDEZN8FuHEAPH5fgsaGtZ1wvj6Z" />
+    <meta name="naver-site-verification" content="" />
 
 </head>
 
