Added Adsense Code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -46,7 +46,8 @@
     <meta name="yandex-verification" content="df4e56b7ff3b08d2" />
     <meta name="seznam-wmt" content="qvHyVUDEZN8FuHEAPH5fgsaGtZ1wvj6Z" />
     <meta name="naver-site-verification" content="" />
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2225171186409905"
+     crossorigin="anonymous"></script>
 </head>
 
 <body class="{% if page.url == "/" %} homefirstpage {% endif %}">
