--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -96,6 +96,10 @@
 
     <!-- Content -->
     <main role="main" class="site-content">
+        <div class="side-bar-left-ads">
+            <h2>Job Decider Tools</h2>
+            <a href="/Quit-Job-Quiz" class="heart btn btn-success btn-block w-100 mt-2">Quit Job Quiz</a>
+        </div>
         {{ content }}
     </main>
 
