--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -39,6 +39,20 @@ a.text-dark:hover {
 .z-index-1 {
 	z-index:1;
 }
+.side-bar-left-ads {
+	position: fixed;
+	top: 80px;
+	left: 3px;
+	min-width: 180px;
+	z-index:9999;
+}
+
+@media screen and (max-width: 1430px) {
+	.side-bar-left-ads {
+		display:none;
+	}
+	
+}
 @media (max-width:991.98px) {
 	.display-3 {
 		font-size:3.5rem;
