--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,8 +97,8 @@
     <!-- Content -->
     <main role="main" class="site-content">
         <div class="side-bar-left-ads">
-            <h2>Job Decider Tools</h2>
-            <a href="/Quit-Job-Quiz" class="heart btn btn-success btn-block mt-2">Quit Job Quiz</a>
+            <h4>Job Decider Tools</h4>
+            <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
         </div>
         {{ content }}
     </main>
