--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -97,13 +97,13 @@
     <!-- Content -->
     <main role="main" class="site-content">
         <div class="side-bar-left-ads">
-            <h4>Job Decider Tools</h4>
-            <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
+            <h5>Job Decider Quizes</h5>
+            <div class="side-bar-left-buttons">
+                <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
+            </div>
         </div>
         {{ content }}
     </main>
-
-
     <!-- Scripts: popper, bootstrap, theme, lunr -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut" crossorigin="anonymous"></script>
 
