--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -68,6 +68,8 @@
     <noscript><div><img src="https://mc.yandex.ru/watch/99851181" style="position:absolute; left:-9999px;" alt="" /></div></noscript>
     <!-- /Yandex.Metrika counter -->
 
+    <script async="async" data-cfasync="false" src="//pl26222277.effectiveratecpm.com/f87adbf393405cf171f85014e699cb60/invoke.js"></script>
+    <!-- <div id="container-f87adbf393405cf171f85014e699cb60"></div> -->
 
 </head>
 
@@ -103,6 +105,7 @@
                 <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
             </div>
         </div>
+        <div id="container-f87adbf393405cf171f85014e699cb60"></div>
         {{ content }}
     </main>
     <!-- Scripts: popper, bootstrap, theme, lunr -->
