--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -105,7 +105,11 @@
                 <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
             </div>
         </div>
-        <div id="container-f87adbf393405cf171f85014e699cb60"></div>
+        <div class="side-bar-right-ads">
+            <div class="side-bar-right-buttons">
+                <div id="container-f87adbf393405cf171f85014e699cb60"></div>
+            </div>
+        </div>
         {{ content }}
     </main>
     <!-- Scripts: popper, bootstrap, theme, lunr -->
