--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -106,16 +106,19 @@
                 <a href="/Quit-Job-Quiz" class="heart btn btn-success mt-2">Quit Job Quiz</a>
             </div>
         </div>
-        <script type="text/javascript">
-            atOptions = {
-                'key' : '2cd1b0c93e9a67b8cd521d7d6ebd8084',
-                'format' : 'iframe',
-                'height' : 600,
-                'width' : 160,
-                'params' : {}
-            };
-        </script>
-        <script type="text/javascript" src="//www.highperformanceformat.com/2cd1b0c93e9a67b8cd521d7d6ebd8084/invoke.js"></script>
+        <div class="side-bar-right-ads">
+            <script type="text/javascript">
+                atOptions = {
+                    'key' : '2cd1b0c93e9a67b8cd521d7d6ebd8084',
+                    'format' : 'iframe',
+                    'height' : 600,
+                    'width' : 160,
+                    'params' : {}
+                };
+            </script>
+            <script type="text/javascript" src="//www.highperformanceformat.com/2cd1b0c93e9a67b8cd521d7d6ebd8084/invoke.js"></script>
+        </div>
+
         {{ content }}
     </main>
     <!-- Scripts: popper, bootstrap, theme, lunr -->
