defer added to script

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -25,14 +25,14 @@
     <link rel="stylesheet" href="{{site.baseurl}}/assets/css/theme.css">
 
     <!-- Jquery on header to make sure everything works, the rest  of the scripts in footer for fast loading -->
-    <script
+    <!-- <script
     src="https://code.jquery.com/jquery-3.3.1.min.js"
     integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
-    crossorigin="anonymous"></script>
+    crossorigin="anonymous"></script> -->
     <!-- Analytics -->
     <!-- Google tag (gtag.js) -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=G-7MT99FR3T6"></script>
-    <script>
+    <script defer src="https://www.googletagmanager.com/gtag/js?id=G-7MT99FR3T6"></script>
+    <script defer>
     window.dataLayer = window.dataLayer || [];
     function gtag(){dataLayer.push(arguments);}
     gtag('js', new Date());
@@ -48,11 +48,10 @@
     <meta name="yandex-verification" content="df4e56b7ff3b08d2" />
     <meta name="seznam-wmt" content="qvHyVUDEZN8FuHEAPH5fgsaGtZ1wvj6Z" />
     <meta name="naver-site-verification" content="" />
-    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2225171186409905"
-     crossorigin="anonymous"></script>
+
 
      <!-- Yandex.Metrika counter -->
-    <script type="text/javascript" >
+    <script defer type="text/javascript" >
         (function(m,e,t,r,i,k,a){m[i]=m[i]||function(){(m[i].a=m[i].a||[]).push(arguments)};
         m[i].l=1*new Date();
         for (var j = 0; j < document.scripts.length; j++) {if (document.scripts[j].src === r) { return; }}
