--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -122,7 +122,7 @@
     <!-- Footer -->
     <footer class="bg-white border-top p-3 text-muted small">
         <div class="container">
-        <div class="row align-items-center justify-content-between">
+        <div class="row align-items-center justify-content-center">
             <div>
                 <span class="navbar-brand mr-2 mb-0"><strong>US Jobs</strong></span>
                 <span>Copyright © <script>document.write(new Date().getFullYear())</script>.</span>
