Added Adsense Code

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -70,7 +70,8 @@
     <!-- <script async="async" data-cfasync="false" src="//pl26222277.effectiveratecpm.com/f87adbf393405cf171f85014e699cb60/invoke.js"></script> -->
     <!-- <div id="container-f87adbf393405cf171f85014e699cb60"></div> -->
 
-
+    <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-2784742237479601"
+     crossorigin="anonymous"></script>
 </head>
 
 <body class="{% if page.url == "/" %} homefirstpage {% endif %}">
