--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -58,18 +58,22 @@ layout: default
 					<script async src="https://static.addtoany.com/menu/page.js"></script>
 					<!-- AddToAny END -->
 				</div>
+				<!-- Article -->
+				<div class="text-muted">
+					Let Alexa read this Article for you!
+				</div>
+				<div class="tts-controls">
+					<button id="play" aria-label="Play article audio">Play</button>
+					<button id="pause" aria-label="Pause article audio">Pause</button>
+					<button id="stop" aria-label="Stop article audio">Stop</button>
+				</div>
 			</div>
 		</div>
         
         
 		<div class="col-md-12 col-lg-8">
             
-            <!-- Article -->
-			<div class="tts-controls">
-				<button id="play" aria-label="Play article audio">Play</button>
-				<button id="pause" aria-label="Pause article audio">Pause</button>
-				<button id="stop" aria-label="Stop article audio">Stop</button>
-			</div>
+
 			<article class="article-post" id="article">                
 			{{ content }}                
 			</article>
