Added Button style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -63,9 +63,9 @@ layout: default
 					Let Alexa read this Article for you!
 				</div>
 				<div class="tts-controls">
-					<button id="play" aria-label="Play article audio">Play</button>
-					<button id="pause" aria-label="Pause article audio">Pause</button>
-					<button id="stop" aria-label="Stop article audio">Stop</button>
+					<button id="play" class="article-audio" aria-label="Play article audio">Play</button>
+					<button id="pause" class="article-audio" aria-label="Pause article audio">Pause</button>
+					<button id="stop" class="article-audio" aria-label="Stop article audio">Stop</button>
 				</div>
 			</div>
 		</div>
