Added Button style

--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,7 +59,7 @@ layout: default
 					<!-- AddToAny END -->
 				</div>
 				<!-- Article -->
-				<div class="text-muted">
+				<div class="text-muted text-alexa-tts">
 					Let Alexa read this Article for you!
 				</div>
 				<div class="tts-controls">
