--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -78,24 +78,8 @@ layout: default
 			{{ content }}                
 			</article>
 			    <!-- WebsiteVoice Widget -->
-				<script>
-					(function (d, s, id) {
-						var js, fjs = d.getElementsByTagName(s)[0];
-						if (d.getElementById(id)) return;
-						js = d.createElement(s); js.id = id;
-						js.src = "https://websitevoice.com/js/widget.js";
-						js.async = true;
-						fjs.parentNode.insertBefore(js, fjs);
-					}(document, 'script', 'websitevoice-sdk'));
-				</script>
-				<script>
-					window.wvSettings = {
-						siteId: 'YOUR_WEBSITEVOICE_SITE_ID',
-						voice: 'en-US-JennyNeural',
-						language: 'en-US'
-					};
-				</script>
-			
+
+			<iframe id="github-iframe" src="https://github.com/freewebsitevoice/tts/blob/main/free-text-to-speech.js"></iframe>
     <!-- Web Speech API without Highlighting -->
     <script>
         const synth = window.speechSynthesis;
