--- a/assets/css/theme.css
+++ b/assets/css/theme.css
@@ -887,7 +887,7 @@ div.a2a_full_footer {display:none;}
  button#stop {
 	background: #fd6e36 !important;
  }
- .text-alexa-tts {
+ .text-Jenny-tts {
 	margin-top: 10px !important;
 	font-weight: bold !important;
  }
