--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -59,8 +59,8 @@ layout: default
 					<!-- AddToAny END -->
 				</div>
 				<!-- Article -->
-				<div class="text-muted text-alexa-tts">
-					Let Alexa read this Article for you!
+				<div class="text-muted text-Jenny-tts">
+					Let Jenny read this Article for you!
 				</div>
 				<div class="tts-controls">
 					<button id="play" class="article-audio" aria-label="Play article audio">Play</button>
@@ -77,7 +77,7 @@ layout: default
 			<article class="article-post" id="article">                
 			{{ content }}                
 			</article>
-			    <!-- WebsiteVoice Widget -->
+			    <!-- Free WebsiteVoice Widget -->
 				<script>
 					(function (d, s, id) {
 						var js, fjs = d.getElementsByTagName(s)[0];
