--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -147,5 +147,5 @@
     {% include tracking-footer.html %}
 
 </body>
-
+<!-- start webpushr code --> <script>(function(w,d, s, id) {if(typeof(w.webpushr)!=='undefined') return;w.webpushr=w.webpushr||function(){(w.webpushr.q=w.webpushr.q||[]).push(arguments)};var js, fjs = d.getElementsByTagName(s)[0];js = d.createElement(s); js.id = id;js.async=1;js.src = "https://cdn.webpushr.com/app.min.js";fjs.parentNode.appendChild(js);}(window,document, 'script', 'webpushr-jssdk'));webpushr('setup',{'key':'BFIM0K_KTh7ieuH7xZWUZt0-qEXyA777JvV9_-O33pkVbJeTXfJF-6k_g-pdpViOP3dqukzb6hw_gURyqhMhDUs' });</script><!-- end webpushr code -->
 </html>
