--- a/_includes/menu-header.html
+++ b/_includes/menu-header.html
@@ -7,6 +7,6 @@
 <a class="nav-link" href="{{site.baseurl}}/authors-list.html">Authors</a>
 </li>
 <li class="nav-item">
-<a class="nav-link" href="{{site.baseurl}}/contact-us">Contact</a>
+<a class="nav-link" href="{{site.baseurl}}/contact">Contact</a>
 </li>
 
