--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -136,8 +136,8 @@
             <a href="/contact-us">Contact US</a>
             <a href="/privacy-policy">Privacy Policies</a>
             <!-- <a href="/disclaimer">Disclaimer</a> -->
-            <a href="/affiliate">Affiliate Policy</a>
-            <a href="/terms-of-service">Terms of Service</a>
+            <!-- <a href="/affiliate">Affiliate Policy</a> -->
+            <!-- <a href="/terms-of-service">Terms of Service</a> -->
             <a href="/sitemap.xml">Site Map</a>
 
         </div>
